# m1xxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: labeler.yml
.github/workflows/: automerge.yml  automerge.yml.disabled  build.yml  build.yml.disabled  labeler.yml  update-mixxx.yml.disabled
gh-pages/: enable-threads.js  index.html
overlay/triplets/: arm64-linux-release.cmake
scripts/: bootstrap-vcpkg  build-mixxx  clean-mixxx  cmake  configure-mixxx  install-apt-deps  install-brew-deps  install-macos-deps  install-ubuntu-deps  install-vcpkg-deps  mixxx-version  update-qt  vcpkg
scripts/helpers/: triplet.py
vars/: cmake.sh  ios-sdkroot.sh  native-env.sh  vcpkg.sh
